# cc-core

./: .bazelrc  .clang-tidy.txt  .gitignore  BUILD.bazel  MODULE.bazel  README.md  package-lock.json
.codex/: context.md  style.md
.codex/tasks/: funcstore.md
.github/: context.md  draft.md  fn-return.md  incremental-pipeline-plan.md
.github/agents/: graph-json-encoder.agent.md
relative/path/to/dest/: entrypoint.js  entrypoint.wasm
scripts/: bazel-build-info.sh  build-and-export.sh
ujcore/_code_drafts/: CreateNodeSlots.cpp.txt
ujcore/_code_drafts/functions/: NodeFuncExtentions.hpp
ujcore/api_backends/: BUILD.bazel  FlowApiBackend.cpp  FlowApiBackend_Test.cpp  GraphApiBackend.cpp  GraphApiBackend_Test.cpp  GraphEngineApiBackend.cpp  GraphEngineApiBackend_Test.cpp  PipelineApiBackend.cpp  PipelineApiBackend_Test.cpp  SharedStore.cpp  SharedStore.h
ujcore/api_schemas/: BUILD.bazel  FlowApi.h  GraphApi.h  GraphEngineApi.h  GraphEngineApi.hpp  PipelineApi.hpp
ujcore/base/: BUILD.bazel  BackendRegistry.cpp  BackendRegistry.h  Bitmap.h  BitmapPool.cpp  BitmapPool.h  BuildInfo.cpp  BuildInfo_Test.cpp  BuildLinkStamp.cpp  IDimension.h  build_info.cpp  build_info.hpp  build_info_test.cpp  build_linkstamp.cpp
ujcore/data/: AbslStringifies.h  AssetInfo.h  BUILD.bazel  FunctionInfo.h  GraphState.h  GraphStateJson.cpp  GraphStateJson.h  GraphStateJson_Test.cpp  IdTypes.h  ResourceInfo.h  TopoSortOrder.cpp  TopoSortOrder.h  TopoSortOrder_Test.cpp  TopoSortState.h  TopoSorter.cpp  TopoSorter.h  TopoSorter_Test.cpp  plinfo.h  plstate.h
ujcore/data/functions/: BUILD.bazel  FunctionInfo.h
ujcore/data/graph/: AbslStringifies.h  BUILD.bazel  ClientMessages.h  FunctionInfo.h  GraphEdge.h  GraphNode.h  GraphSlot.h  NodeFunction.h
ujcore/data/utils/: BUILD.bazel  CreateNodeSlots.cpp  CreateNodeSlots.h
ujcore/function/: AttributeData.h  AttributeDataType.cpp  AttributeDataType.h  AttributeTypeRegistry.cpp  AttributeTypeRegistry.h  AttributeTypeRegistry_Test.cpp  BUILD.bazel  CommonAttributes.h  EncodedAttr.h  FuncParamAccess.h  FunctionBase.h  FunctionContext.h  FunctionLookup.cpp  FunctionLookup.h  FunctionLookup_Test.cpp  FunctionRegistry.cpp  FunctionRegistry.h  FunctionReturn.h  FunctionSpec.h  ParamAccessors.h  ResourceContext.h  TestFunction.cpp
ujcore/functions/: BUILD.bazel  BasicFunctions.cpp  BitmapFunctions.cpp  FunctionIoUtils.cpp  FunctionIoUtils.hpp  FunctionIoUtils_Test.cpp  FunctionStore.cpp.txt  FunctionStore.hpp.txt  NodeFuncExtentions.hpp  NodeFunctionSpec.hpp  WebGpuFunctions.cpp
ujcore/functions/attributes/: BUILD.bazel  BitmapAttr.cpp  BitmapAttr.h  BitmapAttribute.h  ColorsAttr.cpp  ColorsAttr.h  FloatListAttr.cpp  FloatListAttr.h  Points2DAttr.cpp  Points2DAttr.h
ujcore/graph/: AbslStringifies.h  AddElemsOp.cpp  AddElemsOp.h  AssetInfo.h  BUILD.bazel  DeleteElementsOp.cpp  DeleteElementsOp.h  Facades.hpp  FunctionInfo.h  GraphBuilder.cpp  GraphBuilder.h  GraphEngine.cpp  GraphEngine.hpp  GraphEngineImpl.cpp  GraphEngineImpl.h  GraphOps.cpp  GraphOps.hpp  GraphOpsContext.cpp  GraphOpsContext.h  GraphState.h  GraphState.hpp  GraphStateJson.cpp  GraphStateJson.h  GraphStateJson_Test.cpp  GraphTypes.h  GraphUtils.cpp  GraphUtils.h  GraphUtils_Test.cpp  IdGenerator.cpp  IdGenerator.hpp  IdGenerator_Test.cpp  IdTypes.h  NodeProcessor.cpp  NodeProcessor.h  NodeProcessor_Test.cpp  ResourceInfo.h  TopoSortOrder.cpp  TopoSortOrder.h  TopoSortOrder_Test.cpp  TopoSortState.h  (+3 more)
ujcore/graph/ops/: BUILD.bazel  GraphOperatorBase.hpp  InsertNodeOp.cpp  InsertNodeOp.hpp
ujcore/pipeline/: BUILD.bazel  FlowTypes.h  FuncExecutor.cpp  FuncExecutor.h  GraphPipeline.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineBuilder_Test.cpp  PipelineFnNode.cpp  PipelineFnNode.h  PipelineIONode.cpp  PipelineIONode.h  PipelineRunner.cpp  PipelineRunner.h  PipelineRunner_Test.cpp  PipelineSlot.h
ujcore/protos/: BUILD.bazel  graph.proto
ujcore/testing/: BUILD.bazel  TestFunction.cpp
ujcore/utils/: BUILD.bazel  IdGenerator.cpp  IdGenerator.h  IdGenerator_Test.cpp  IdUtils.cpp  IdUtils.h  IdUtils_Test.cpp  status_macros.h
ujcore/wasm/: BUILD.bazel  BitmapEncoding.cpp  JsBitmapPool.cpp  JsBitmapPool.h  WebGpuTaskPoolInterface.ts  entrypoint.cpp  post_steps.js  pre_steps.js  wa_exporter.mjs
ujcore/wasm/wgpu/: BUILD.bazel  WebGpuFunctions.cpp
