module(
    name = "cc_core",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
# https://github.com/emscripten-core/emsdk/issues/1642
bazel_dep(name = "emsdk", version = "4.0.17")

bazel_dep(name = "cppschema", version = "1.1.0")
git_override(
    module_name = "cppschema",
    remote = "https://github.com/avikdev/cpp-schema.git",
    commit = "c612a18",
)