module(
    name = "cc_core",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.5")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
# https://github.com/emscripten-core/emsdk/issues/1642
bazel_dep(name = "emsdk", version = "4.0.17")

bazel_dep(name = "cppschema", version = "1.3.0")
git_override(
    module_name = "cppschema",
    remote = "https://github.com/avikdev/cpp-schema.git",
    commit = "88556066d22f16c44991c14b8cf0de8a62e8284b",
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
