module(
    name = "cc_core",
    version = "1.0.0",
    # Only change the compatibility level if you make a breaking change
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "aspect_rules_js", version = "2.9.2")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
# https://github.com/emscripten-core/emsdk/issues/1642
bazel_dep(name = "emsdk", version = "4.0.17")


bazel_dep(name = "cppschema", version = "1.3.0")
git_override(
    module_name = "cppschema",
    remote = "https://github.com/avikdev/cpp-schema.git",
    commit = "88556066d22f16c44991c14b8cf0de8a62e8284b",
)

# hedron_compile_commands is not published to the BCR so you must use an override
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eduardvercaemer/bazel-compile-commands-extractor.git",
    commit = "e49f0cd201931f2a3137814a66a0d2e30b45cda1",
)
