load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "GraphEngineApiBackend",
    srcs = ["GraphEngineApiBackend.cpp"],
    deps = [
        "//ujcore/api_schemas:GraphEngineApi",
        "//ujcore/data:GraphState",
        "//ujcore/graph:GraphBuilder",
        "@abseil-cpp//absl/log",
        "@cppschema//:backend_bridge",
    ],
    alwayslink = 1,  # Forced linking, even if not directly referenced
)

cc_test(
    name = "GraphEngineApiBackend_Test",
    srcs = ["GraphEngineApiBackend_Test.cpp"],
    deps = [
        ":GraphEngineApiBackend",
        "//ujcore/data:AbslStringifies",
        "//ujcore/testing:TestFunction",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
    ],
)
