load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "SharedStore",
    srcs = ["SharedStore.cpp"],
    hdrs = ["SharedStore.h"],
    deps = [
        "//ujcore/graph:GraphBuilder",
        "//ujcore/graph:GraphState",
        "//ujcore/graph:TopoSorter",
        "//ujcore/pipeline:PipelineRunner",
    ],
)

cc_library(
    name = "FlowApiBackend",
    srcs = ["FlowApiBackend.cpp"],
    deps = [
        ":SharedStore",
        "//ujcore/api_schemas:FlowApi",
        "@cppschema//:backend_bridge",
    ],
    alwayslink = 1,
)

cc_test(
    name = "FlowApiBackend_Test",
    srcs = ["FlowApiBackend_Test.cpp"],
    deps = [
        ":FlowApiBackend",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "GraphApiBackend",
    srcs = ["GraphApiBackend.cpp"],
    deps = [
        ":SharedStore",
        "//ujcore/api_schemas:GraphApi",
        "//ujcore/graph:GraphState",
        "//ujcore/graph:GraphStateJson",
        "//ujcore/function:AttributeDataType",
        "//ujcore/function:FunctionLookup",
        "//ujcore/function:FunctionSpec",
        "//ujcore/graph:GraphBuilder",
        "//ujcore/graph:GraphUtils",
        "//ujcore/pipeline:PipelineRunner",
        "@abseil-cpp//absl/log",
        "@cppschema//:backend_bridge",
    ],
    alwayslink = 1,  # Forced linking, even if not directly referenced
)

cc_test(
    name = "GraphApiBackend_Test",
    srcs = ["GraphApiBackend_Test.cpp"],
    deps = [
        ":GraphApiBackend",
        "//ujcore/graph:AbslStringifies",
        "//ujcore/testing:TestFunction",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
    ],
)
