load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "GraphEngineApi",
    hdrs = ["GraphEngineApi.h"],
    deps = [
        "//ujcore/data:plinfo",
        "//ujcore/data:plstate",
        "//ujcore/data:FunctionInfo",
        "//ujcore/data:ResourceInfo",
        "@cppschema//:apispec",
        "@cppschema//:js_converter",
    ],
)
