load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "GraphEngineApi",
    hdrs = ["GraphEngineApi.h"],
    deps = [
        "//ujcore/graph:GraphTypes",
        "//ujcore/graph:AssetInfo",
        "//ujcore/graph:FunctionInfo",
        "//ujcore/graph:ResourceInfo",
        "@cppschema//:apispec",
        "@cppschema//:js_converter",
    ],
)
