load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "FlowApi",
    hdrs = ["FlowApi.h"],
    deps = [
        "//ujcore/graph:AssetInfo",
        "@cppschema//:apispec",
    ],
)

cc_library(
    name = "GraphApi",
    hdrs = ["GraphApi.h"],
    deps = [
        "//ujcore/graph:GraphTypes",
        "//ujcore/graph:AssetInfo",
        "//ujcore/graph:FunctionInfo",
        "//ujcore/graph:ResourceInfo",
        "@cppschema//:apispec",
    ],
)
