load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "build_info",
    srcs = ["build_info.cpp"],
    hdrs = ["build_info.hpp"],
    linkstamp = "build_linkstamp.cpp",
)

cc_test(
    name = "build_info_test",
    srcs = ["build_info_test.cpp"],
    deps = [
        ":build_info",
        "@googletest//:gtest_main",
    ],
)