load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "BuildInfo",
    srcs = ["BuildInfo.cpp"],
    hdrs = ["BuildInfo.h"],
    linkstamp = "BuildLinkStamp.cpp",
)

cc_test(
    name = "BuildInfo_Test",
    srcs = ["BuildInfo_Test.cpp"],
    deps = [
        ":BuildInfo",
        "@googletest//:gtest_main",
    ],
)
