load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "BackendRegistry",
    srcs = ["BackendRegistry.cpp"],
    hdrs = ["BackendRegistry.h"],
)

cc_library(
    name = "Bitmap",
    hdrs = ["Bitmap.h"],
)

cc_library(
    name = "BitmapPool",
    srcs = ["BitmapPool.cpp"],
    hdrs = ["BitmapPool.h"],
    deps = [
        ":BackendRegistry",
        ":Bitmap",
    ],
)

cc_library(
    name = "BuildInfo",
    srcs = ["BuildInfo.cpp"],
    hdrs = ["BuildInfo.h"],
    linkstamp = "BuildLinkStamp.cpp",
)

cc_test(
    name = "BuildInfo_Test",
    srcs = ["BuildInfo_Test.cpp"],
    deps = [
        ":BuildInfo",
        "@googletest//:gtest_main",
    ],
)
