load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "AbslStringifies",
    hdrs = ["AbslStringifies.h"],
    deps = [
        ":plinfo",
        # Although there is no header dependency on absl::strings, this is a must
        # have peer dependency, as the caller primarility uses this lib to enable
        # absl friendly string conversion (e.g. for use in `absl::StrCat`)
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "plinfo",
    hdrs = ["plinfo.h"],
    deps = [
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "plstate",
    hdrs = ["plstate.h"],
    deps = [
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)