load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# NOTE: Keep this module free of any dependency on other module.

cc_library(
    name = "AttributeData",
    hdrs = ["AttributeData.h"],
    deps = [
        ":AttributeDataType",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "AttributeDataType",
    srcs = ["AttributeDataType.cpp"],
    hdrs = ["AttributeDataType.h"],
)

cc_library(
    name = "CommonAttributes",
    hdrs = ["CommonAttributes.h"],
    deps = [
        ":AttributeDataType",
        "@abseil-cpp//absl/log:check",
    ],
)


cc_library(
    name = "FuncParamAccess",
    hdrs = ["FuncParamAccess.h"],
)

cc_library(
    name = "FunctionBase",
    hdrs = ["FunctionBase.h"],
    deps = [
        ":AttributeData",
        ":FunctionContext",
        ":FunctionSpec",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "FunctionContext",
    hdrs = ["FunctionContext.h"],
    deps = [
        ":AttributeData",
        ":FuncParamAccess",
    ],
)

cc_library(
    name = "FunctionRegistry",
    srcs = ["FunctionRegistry.cpp"],
    hdrs = ["FunctionRegistry.h"],
    deps = [
        ":FunctionBase",
        "@abseil-cpp//absl/log",
    ],
)

cc_library(
    name = "FunctionSpec",
    hdrs = ["FunctionSpec.h"],
    deps = [
        ":AttributeDataType",
        ":FuncParamAccess",
    ],
)

cc_library(
    name = "ParamAccessors",
    hdrs = ["ParamAccessors.h"],
    deps = [
        ":AttributeData",
        ":FunctionContext",
        "@abseil-cpp//absl/log",
    ],
)
