load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "BasicFunctions",
    srcs = ["BasicFunctions.cpp"],
    deps = [
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:FunctionSpec",
        "//ujcore/function:ParamAccessors",
        "//ujcore/functions/attributes:FloatListAttr",
        "//ujcore/functions/attributes:Points2DAttr",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
    ],
    alwayslink = 1,
)

cc_library(
    name = "BitmapFunctions",
    srcs = ["BitmapFunctions.cpp"],
    deps = [
        "//ujcore/base:Bitmap",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:FunctionSpec",
        "//ujcore/function:ParamAccessors",
        "//ujcore/functions/attributes:BitmapAttr",
        "//ujcore/functions/attributes:ColorsAttr",
        "//ujcore/functions/attributes:FloatListAttr",
        "//ujcore/functions/attributes:Points2DAttr",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
    ],
    alwayslink = 1,
)

cc_library(
    name = "all_functions",
    deps = [
        ":BasicFunctions",
        ":BitmapFunctions",
    ],
)