load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "GraphBuilder",
    srcs = ["GraphBuilder.cpp"],
    hdrs = ["GraphBuilder.h"],
    deps =[
        ":GraphUtils",
        "//ujcore/data:AbslStringifies",
        "//ujcore/data:plinfo",
        "//ujcore/data:FunctionInfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:TopoSortOrder",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:FunctionSpec",
        "//ujcore/graph:IdGenerator",
        "//ujcore/utils:status_macros",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "GraphUtils",
    srcs = ["GraphUtils.cpp"],
    hdrs = ["GraphUtils.h"],
    deps =[
        "//ujcore/data:plinfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:IdTypes",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "IdGenerator",
    srcs = ["IdGenerator.cpp"],
    hdrs = ["IdGenerator.h"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "IdGenerator_Test",
    srcs = ["IdGenerator_Test.cpp"],
    deps = [
        ":IdGenerator",
        "@googletest//:gtest_main",
    ],
)
