load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "GraphBuilder",
    srcs = ["GraphBuilder.cpp"],
    hdrs = ["GraphBuilder.h"],
    deps =[
        ":GraphUtils",
        "//ujcore/data:AbslStringifies",
        "//ujcore/data:plinfo",
        "//ujcore/data:FunctionInfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:TopoSorter",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:FunctionSpec",
        "//ujcore/utils:IdUtils",
        "//ujcore/utils:status_macros",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "GraphUtils",
    srcs = ["GraphUtils.cpp"],
    hdrs = ["GraphUtils.h"],
    deps =[
        "//ujcore/data:plinfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:IdTypes",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)
