load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "AbslStringifies",
    hdrs = ["AbslStringifies.h"],
    deps = [
        ":GraphTypes",
        ":IdTypes",
        # Although there is no header dependency on absl::strings, this is a must
        # have peer dependency, as the caller primarility uses this lib to enable
        # absl friendly string conversion (e.g. for use in `absl::StrCat`)
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "AssetInfo",
    hdrs = ["AssetInfo.h"],
    deps = [
        ":IdTypes",
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "FunctionInfo",
    hdrs = ["FunctionInfo.h"],
    deps = [
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "GraphBuilder",
    srcs = ["GraphBuilder.cpp"],
    hdrs = ["GraphBuilder.h"],
    deps = [
        ":AbslStringifies",
        ":FunctionInfo",
        ":GraphState",
        ":GraphTypes",
        ":GraphUtils",
        ":TopoSorter",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/utils:IdUtils",
        "//ujcore/utils:status_macros",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "GraphState",
    hdrs = ["GraphState.h"],
    deps = [
        ":GraphTypes",
        ":IdTypes",
        ":TopoSortState",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "GraphTypes",
    hdrs = ["GraphTypes.h"],
    deps = [
        ":IdTypes",
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "GraphUtils",
    srcs = ["GraphUtils.cpp"],
    hdrs = ["GraphUtils.h"],
    deps = [
        ":GraphState",
        ":GraphTypes",
        ":IdTypes",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "GraphUtils_Test",
    srcs = ["GraphUtils_Test.cpp"],
    deps = [
        ":GraphBuilder",
        ":GraphState",
        ":GraphTypes",
        ":GraphUtils",
        ":IdTypes",
        ":TopoSorter",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "IdTypes",
    hdrs = ["IdTypes.h"],
    deps = [
        "@cppschema//:strong_types",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "ResourceInfo",
    hdrs = ["ResourceInfo.h"],
    deps = [
        "@cppschema//:enum_registry",
        "@cppschema//:visitor_macros",
    ],
)

cc_library(
    name = "TopoSortState",
    hdrs = ["TopoSortState.h"],
    deps = [
        ":IdTypes",
    ],
)

cc_library(
    name = "TopoSorter",
    srcs = ["TopoSorter.cpp"],
    hdrs = ["TopoSorter.h"],
    deps = [
        ":IdTypes",
        ":TopoSortState",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "TopoSorter_Test",
    srcs = ["TopoSorter_Test.cpp"],
    deps = [
        ":TopoSorter",
        "@googletest//:gtest_main",
    ],
)
