load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "PipelineFnNode",
    srcs = ["PipelineFnNode.cpp"],
    hdrs = ["PipelineFnNode.h"],
    deps = [
        "//ujcore/data:IdTypes",
        "//ujcore/function:AttributeData",
        "//ujcore/function:FuncParamAccess",
        "//ujcore/function:FunctionBase",
        "//ujcore/function:FunctionContext",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "PipelineRunner",
    srcs = ["PipelineRunner.cpp"],
    hdrs = ["PipelineRunner.h"],
    deps = [
        ":PipelineFnNode",
        "//ujcore/data:GraphState",
        "//ujcore/data:IdTypes",
        "//ujcore/function:AttributeData",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:FunctionSpec",
        "//ujcore/utils:status_macros",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "PipelineRunner_Test",
    srcs = ["PipelineRunner_Test.cpp"],
    deps = [
        ":PipelineRunner",
        "//ujcore/testing:TestFunction",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest_main",
    ],
)
