load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "GraphPipeline",
    # srcs = ["GraphPipeline.cpp"],
    hdrs = ["GraphPipeline.h"],
    deps = [
        ":PipelineFnNode",
        ":PipelineIONode",
        "//ujcore/data:IdTypes",
        "//ujcore/data:plstate",
        "//ujcore/function:AttributeData",
    ],
)

cc_library(
    name = "PipelineBuilder",
    srcs = ["PipelineBuilder.cpp"],
    hdrs = ["PipelineBuilder.h"],
    deps = [
        ":GraphPipeline",
        ":PipelineFnNode",
        ":PipelineSlot",
        "//ujcore/data:AssetInfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:IdTypes",
        "//ujcore/data:plinfo",
        "//ujcore/data:plstate",
        "//ujcore/graph:GraphUtils",
        "//ujcore/function:FunctionRegistry",
        "//ujcore/function:AttributeData",
        "//ujcore/function:AttributeTypeRegistry",
        "//ujcore/utils:status_macros",
    ],
)

cc_library(
    name = "PipelineFnNode",
    srcs = ["PipelineFnNode.cpp"],
    hdrs = ["PipelineFnNode.h"],
    deps = [
        ":PipelineSlot",
        "//ujcore/data:IdTypes",
        "//ujcore/data:plstate",
        "//ujcore/function:AttributeData",
        "//ujcore/function:AttributeTypeRegistry",
        "//ujcore/function:FuncParamAccess",
        "//ujcore/function:FunctionBase",
        "//ujcore/function:FunctionContext",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "PipelineIONode",
    srcs = ["PipelineIONode.cpp"],
    hdrs = ["PipelineIONode.h"],
    deps = [
        ":PipelineSlot",
        "//ujcore/data:IdTypes",
        "//ujcore/data:plstate",
        "//ujcore/function:AttributeData",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "PipelineRunner",
    srcs = ["PipelineRunner.cpp"],
    hdrs = [
        "PipelineRunner.h",
    ],
    deps = [
        ":GraphPipeline",
        ":PipelineBuilder",
        ":PipelineIONode",
        "//ujcore/base:BitmapPool",
        "//ujcore/data:AssetInfo",
        "//ujcore/data:GraphState",
        "//ujcore/data:IdTypes",
        "//ujcore/data:ResourceInfo",
        "//ujcore/data:plstate",
        "//ujcore/utils:status_macros",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "PipelineSlot",
    hdrs = ["PipelineSlot.h"],
    deps = [
        "//ujcore/function:AttributeData",
        "//ujcore/function:FuncParamAccess",
    ],
)

cc_test(
    name = "PipelineRunner_Test",
    srcs = ["PipelineRunner_Test.cpp"],
    deps = [
        ":PipelineRunner",
        "//ujcore/testing:TestFunction",
        "@abseil-cpp//absl/status:status_matchers",
        "@googletest//:gtest_main",
    ],
)
