load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//:__subpackages__"],
)

cc_library(
    name = "IdGenerator",
    srcs = ["IdGenerator.cpp"],
    hdrs = ["IdGenerator.h"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "IdGenerator_Test",
    srcs = ["IdGenerator_Test.cpp"],
    deps = [
        ":IdGenerator",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "IdUtils",
    srcs = ["IdUtils.cpp"],
    hdrs = ["IdUtils.h"],
    deps = [
        "@cppschema//:strong_types",
    ],
)

cc_test(
    name = "IdUtils_Test",
    srcs = ["IdUtils_Test.cpp"],
    deps = [
        ":IdUtils",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.h"],
    deps =[
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)