load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

cc_library(
    name = "JsBitmapPool",
    srcs = ["JsBitmapPool.cpp"],
    hdrs = ["JsBitmapPool.h"],
    deps = [
        "//ujcore/base:BackendRegistry",
        "//ujcore/base:BitmapPool",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
    ],
)

filegroup(
    name = "wasm-post-js",
    srcs = ["post_steps.js"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "wasm-pre-js",
    srcs = ["pre_steps.js"],
    visibility = ["//visibility:private"],
)

# This is a binary with no `main` function, which is ok as this will never be build into a
# standalone system binary, always converted into a wasm binary before using.
# The `--no-entry` flag in the linkopts below tells the linker to allow this.
cc_binary(
    name = "entrypoint",
    srcs = [
        "entrypoint.cpp",
    ],
    deps = [
        ":JsBitmapPool",
         "//ujcore/api_schemas:GraphEngineApi",
         "//ujcore/api_backends:GraphEngineApiBackend",
         "//ujcore/base:BuildInfo",
         # This pulls all the actual function definitions.
         "//ujcore/functions:all_functions",
         "//ujcore/functions/attributes:all_attributes",
         "@abseil-cpp//absl/log:flags", # Keep: For controlling Abseil logging related flags.
         "@abseil-cpp//absl/flags:parse",
         "@cppschema//:js_api_bridge",
    ],
    features = ["emcc_debug_link"],
    linkopts = [
        "-s MODULARIZE=1",
        "-s EXPORT_ES6=1",
        "-s USE_ES6_IMPORT_META=1",
        "-s ENVIRONMENT=node,worker",
        "-s STANDALONE_WASM",
        "-sJSPI",
        "-s ALLOW_MEMORY_GROWTH=1",
        "-s EXPORTED_FUNCTIONS=\"['_malloc','_free']\"",
        "-s EXPORTED_RUNTIME_METHODS=['HEAPU8']",
        # Export the module creation function with a specific name, replacing the default 'Module'.
        "-sEXPORT_NAME=CreateUjWasmModule",
        # [Debug]: Print C++ exceptions to the console, which can be helpful for debugging.
        "-s ASSERTIONS=1",
        "-s EXCEPTION_STACK_TRACES=1",

        "--bind",  # Enable embind
        "--closure=0",  # Do not use closure
        "--clear-cache=1",
        "--no-entry",

        "--pre-js $(location :wasm-pre-js)",
        "--post-js $(location :wasm-post-js)",

        "--profiling-funcs",
        "-fwasm-exceptions",
    ],
    additional_linker_inputs = [
        ":wasm-post-js",
        ":wasm-pre-js",
    ],

    # This target won't build successfully on its own using system headers, because of missing
    # emscripten headers etc. Therefore, we hide it from wildcards.
    tags = ["manual"],

    copts = select({
        "//conditions:default": [
            "-Wno-error=unused-command-line-argument",
        ],
    })
)

wasm_cc_binary(
    name = "entrypoint_wa",
    cc_target = ":entrypoint",
)

js_binary(
    name = "wa_exporter",
    entry_point = "wa_exporter.mjs",
    data = [
        ":entrypoint_wa",
        "wa_exporter.mjs",
    ],
)
